<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_record">

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.seeksky.thebook.ui.AddFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.seeksky.thebook.ui.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistic" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.seeksky.thebook.ui.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.seeksky.thebook.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
